[+] input field validation for numbers

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -141,6 +141,13 @@ body {
     margin-bottom: 100px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
 /*<!---->tracking*/
 
 .bs4-order-tracking {
