--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -96,10 +96,14 @@ body {
 }
 
 .title-in-add {
-    width: 80%;
+    width: 70%;
 }
 
 .btn-in-add {
+    width: 20%;
+}
+
+.btn-in-add-txt {
     width: 20%;
 }
 
@@ -118,7 +122,7 @@ body {
 }
 
 .txt-in-box{
-    width: 20%;
+    width: 30%;
     text-align: right;
 }
 
@@ -243,4 +247,44 @@ input::-webkit-inner-spin-button {
     border: none;
     outline: none;
     box-shadow: none;
+}
+
+/*deliveries*/
+.container {
+
+}
+
+ul.tabs {
+    margin: 0px;
+    padding: 0px;
+
+
+    list-style: none;
+}
+ul.tabs li {
+    text-align: center;
+    background: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 393px;
+    color: #222;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+ul.tabs li.current {
+    font-weight: bold;
+    background: #ededed;
+    color: #222;
+}
+
+.tab-content {
+    display: none;
+    background: #ededed;
+    padding: 15px;
+}
+
+.tab-content.current {
+    display: inherit;
 }
